Scoreboards/wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
for details on configuring this project to bundle and minify static web assets. */
body {
    color: #909090;
    font-family: "Lato",sans-serif;
    padding-top: 48px;
    font-style: normal;
    font-weight: 400;
    background-color: #f3f3f3;
    line-height: 1.7;
    font-size: 16px;
}

.container {
    padding: 0;
    margin: 0;
    width: 100%;
    height: auto;
}

.body-content {
    padding: 0;
    margin: 0;
}

/*HOME PAGE*/
.home-page {
    background-image: url(/images/banner-home.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    padding: 15px 30px;
    min-height: 750px;
}

/*LOGIN PAGE*/
.login-page {
    background-image: url(/images/contact-banner.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    padding: 15px;
}

/*REGISTER PAGE*/
.register-page {
    background-image: url(/images/contact-banner.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    padding: 15px;
}

/* NEW USER GAME PAGE*/
.new-user-game {
    background-image: url(/images/shutterstock_217325476.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    padding: 15px;
}

.btn-submitUserGame {
    color: #a6a6a6;
}

.btn-submitUserGame:hover {
    color: #262626;
}

/*CONTACT AND ABOUT PAGE*/
.company-info {
    padding: 15px;
}

/* Navbar Custom coloring */
.navigation {
    padding: 0 15px 0 25px;
}

.navbar-inverse, .navbar-collapse, .collapse {
    background-color: #000;
}

.navbar, .navbar-inverse, .navbar-fixed-top {
    background-color: #000;
}

.nav, .navbar-nav, .navbar-right, .navbar-header {
    height: 68px;
    background-color: #000;
}

.navbar-header{
    padding: 7px 0;
}

.navbar-inverse .navbar-nav > li > a, button {
    font-family: inherit;
    font-style: normal;
    font-weight: 200;
    line-height: 1;
    text-transform: uppercase;
    color: hsl(0,0%,100%);
    padding: 25px 15px;
}

    .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
        color: #e4ac25;
        border-bottom: 3px solid #e4ac25;
    }

.navbar-brand {
    padding-top: 0;
    padding-bottom: 0;
}

.instillery-logo-navbar{
    width: 7em;
}

/*table-hover color changer*/
/*.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
    background-color: rgba(38, 38, 38, 0.1) !important;
}*/

.table tbody tr:hover td, .table tbody tr:hover th {
    background-color: rgb(39, 39, 39);
    cursor: pointer;
}

.float-left1 {
}
.float-mid1 {
}
.float-right1 {
}

.display-next-to-each-other {
}

.display-next-to-each-other2 {
}

